--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="inner">
 			<div class="content">
 				<h1>Photography</h1>
-				<h3>Author Antonio Gonzalez</h3>
+				<p>Author Antonio Gonzalez</p>
 			</div>
 		</div>
 	</section>
