update but issue with portfolio images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Photography</title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css" />
 	<link rel="stylesheet" href="https://m.w3newbie.com/you-tube.css">
-	<link href="css/font-awesome.min.css" rel="stylesheet"/>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 	<link rel="shortcut icon" type="image/png" href="./img/camera-icon.png"/>
 </head>
 <body>
@@ -26,7 +26,7 @@
 		<div class="inner">
 			<div class="content">
 				<h1>Photography</h1>
-				<p>Author Antonio Gonzalez</p>
+				<p>Author Derek Henderson</p>
 			</div>
 		</div>
 	</section>
@@ -45,7 +45,7 @@
 		</section>
 		<!-- This is the photo on the right of the about me -->
 		<section class="sidebar">
-			<img src="./img/model.jpeg" alt="profile-pic">
+			<img src="./img/dhen.png" alt="profile-pic">
 		</section>
 
 	<div class="clearfix"></div>
@@ -56,37 +56,37 @@
 		<section class="one-third-port">
 			<!-- add the image url for full size -->
 			<a href="http://" target="_blank">
-				<img src="./img/photography-1.png" alt="image1" title="Click here for full size image"></img>
+				<img src="./img/nature.png" alt="image1" title="Click here for full size image"></img>
 			</a>
 		</section>
 		<section class="one-third-port">
 			<!-- add the image url for full size -->
 			<a href="http://" target="_blank">
-				<img src="./img/photography-2.png" alt="image2" title="Click here for full size image"></img>
+				<img src="./img/wedding.png" alt="image2" title="Click here for full size image"></img>
 			</a>
 		</section>
 		<section class="one-third-port">
 			<!-- add the image url for full size -->
 			<a href="http://" target="_blank">
-				<img src="./img/photography-3.png" alt="image3" title="Click here for full size image"></img>
+				<img src="./img/concert.png" alt="image3" title="Click here for full size image"></img>
 			</a>
 		</section>
 		<section class="one-third-port">
 			<!-- add the image url for full size -->
 			<a href="http://" target="_blank">
-				<img src="./img/photography-4.png" alt="image4" title="Click here for full size image"></img>
+				<img src="./img/nature.png" alt="image4" title="Click here for full size image"></img>
 			</a>
 		</section>
 		<section class="one-third-port">
 			<!-- add the image url for full size -->
 			<a href="http://" target="_blank">
-				<img src="./img/photography-5.png" alt="image5" title="Click here for full size image"></img>
+				<img src="./img/Hoop.png" alt="image5" title="Click here for full size image"></img>
 			</a>
 		</section>
 		<section class="one-third-port">
 			<!-- add the image url for full size -->
 			<a href="http://" target="_blank">
-				<img src="./img/photography-6.png" alt="image6" title="Click here for full size image"></img>
+				<img src="./img/concert.png" alt="image6" title="Click here for full size image"></img>
 			</a>
 		</section>
 
@@ -97,7 +97,6 @@
 		<section class="left-col">
 			<h2>My Services</h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At quidem deserunt sit quas amet fugiat, 
-				nostrum dignissimos voluptatum possimus ea velit tempora excepturi delectus. Veniam eaque repudiandae et rerum aperiam.Lorem ipsum dolor sit amet consectetur adipisicing elit. At quidem deserunt sit quas amet fugiat, 
 				nostrum dignissimos voluptatum possimus ea velit tempora excepturi delectus. Veniam eaque repudiandae et rerum aperiam.Lorem ipsum dolor sit amet consectetur adipisicing elit. At quidem deserunt sit quas amet fugiat, 
 				nostrum dignissimos voluptatum possimus ea velit tempora excepturi delectus. Veniam eaque repudiandae et rerum aperiam.Lorem ipsum dolor sit amet consectetur adipisicing elit. At quidem deserunt sit quas amet fugiat, 
 				nostrum dignissimos voluptatum possimus ea velit tempora excepturi delectus. Veniam eaque repudiandae et rerum aperiam.Lorem ipsum dolor sit amet consectetur adipisicing elit. At quidem deserunt sit quas amet fugiat, 
@@ -140,12 +139,13 @@
 
 	<footer>
 		<ul class="social">
-			<li><a href="#" target="_blank">facebook</a></li>
-			<li><a href="#" target="_blank"> google </a></li>
-			<li><a href="#" target="_blank">Twitter </a></li>
-			<li><a href="#" target="_blank">Instagram </a></li>
+			<li><a href="https://www.facebook.com/derek.henderson.73" target="_blank"><i class="fab fa-facebook"></i></a></li>
+			<li><a href="https://www.google.com/" target="_blank"><i class="fab fa-google"></i></a></li>
+			<li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
+			<li><a href="https://www.instagram.com/dhen2020/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a></li>
 		</ul>
-		
+	</footer>
+	<footer class="second">	
 		<p>Created by Antonio Gonzalez</p>
 	</footer>
 </body>
