added media query for mobile virsion

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 		<section class="left-col">
 			<h2>About Me</h2>
 			<p style="text-indent: 6%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, aliquid unde itaque minima commodi obcaecati ut, 
-			consectetur nihil nemo, deleniti eligendi quia animi nisi consequatur eos minus! Voluptatum, perspiciatis tempore.Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, aliquid unde itaque minima commodi obcaecati ut, 
 			consectetur nihil nemo, deleniti eligendi quia animi nisi consequatur eos minus! Voluptatum, perspiciatis tempore.
 			</p>
 		</section>
@@ -56,25 +55,25 @@
 		<section class="one-third-port">
 			<!-- add the image url for full size -->
 			<a href="http://" target="_blank">
-				<img src="./img/nature.png" alt="image1" title="Click here for full size image"></img>
+				<img src="./img/photography-4.png" alt="image1" title="Click here for full size image"></img>
 			</a>
 		</section>
 		<section class="one-third-port">
 			<!-- add the image url for full size -->
 			<a href="http://" target="_blank">
-				<img src="./img/wedding.png" alt="image2" title="Click here for full size image"></img>
+				<img src="./img/mirrorMirror.png" alt="image2" title="Click here for full size image"></img>
 			</a>
 		</section>
 		<section class="one-third-port">
 			<!-- add the image url for full size -->
 			<a href="http://" target="_blank">
-				<img src="./img/concert.png" alt="image3" title="Click here for full size image"></img>
+				<img src="./img/wedding.png" alt="image3" title="Click here for full size image"></img>
 			</a>
 		</section>
 		<section class="one-third-port">
 			<!-- add the image url for full size -->
 			<a href="http://" target="_blank">
-				<img src="./img/nature.png" alt="image4" title="Click here for full size image"></img>
+				<img src="./img/concert.png" alt="image4" title="Click here for full size image"></img>
 			</a>
 		</section>
 		<section class="one-third-port">
@@ -86,9 +85,11 @@
 		<section class="one-third-port">
 			<!-- add the image url for full size -->
 			<a href="http://" target="_blank">
-				<img src="./img/concert.png" alt="image6" title="Click here for full size image"></img>
+				<img src="./img/prom.png" alt="image5" title="Click here for full size image"></img>
 			</a>
 		</section>
+		
+		
 
 	<div class="clearfix"></div>
 
@@ -97,9 +98,6 @@
 		<section class="left-col">
 			<h2>My Services</h2>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At quidem deserunt sit quas amet fugiat, 
-				nostrum dignissimos voluptatum possimus ea velit tempora excepturi delectus. Veniam eaque repudiandae et rerum aperiam.Lorem ipsum dolor sit amet consectetur adipisicing elit. At quidem deserunt sit quas amet fugiat, 
-				nostrum dignissimos voluptatum possimus ea velit tempora excepturi delectus. Veniam eaque repudiandae et rerum aperiam.Lorem ipsum dolor sit amet consectetur adipisicing elit. At quidem deserunt sit quas amet fugiat, 
-				nostrum dignissimos voluptatum possimus ea velit tempora excepturi delectus. Veniam eaque repudiandae et rerum aperiam.Lorem ipsum dolor sit amet consectetur adipisicing elit. At quidem deserunt sit quas amet fugiat, 
 				nostrum dignissimos voluptatum possimus ea velit tempora excepturi delectus. Veniam eaque repudiandae et rerum aperiam.
 			</p>
 		</section>
@@ -139,10 +137,10 @@
 
 	<footer>
 		<ul class="social">
-			<li><a href="https://www.facebook.com/derek.henderson.73" target="_blank"><i class="fab fa-facebook"></i></a></li>
+			<li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a></li>
 			<li><a href="https://www.google.com/" target="_blank"><i class="fab fa-google"></i></a></li>
 			<li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
-			<li><a href="https://www.instagram.com/dhen2020/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a></li>
+			<li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a></li>
 		</ul>
 	</footer>
 	<footer class="second">	
