updated the image sizing and added an id to the profile picture

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		</section>
 		<!-- This is the photo on the right of the about me -->
 		<section class="sidebar">
-			<img src="./img/dhen.png" alt="profile-pic">
+			<img id="prof-pic" src="./img/dhen.png" alt="profile-pic">
 		</section>
 
 	<div class="clearfix"></div>
